# renquant-backtesting

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  renquant_repo.yml
.github/workflows/: ci.yml
doc/progress/: 2026-07-04-s3-placebo-difference-gate.md  2026-07-22-wf-patchtst-freshness-gate-ac7.md
docs/: latest-run.md  source-map.md
docs/design/: 2026-07-05-wf-gate-incumbent-regression.md
docs/progress/: 2026-06-25-vol-gate-opportunity-cost.md  2026-06-28-wf-gate-genuine-ic-diagnostic.md  2026-07-03-wf-gate-genuine-ic-historical-replay.md  2026-07-04-market-calendar-repoint.md  2026-07-04-notify-canonical-repoint.md  2026-07-04-s3-placebo-difference-gate.md  2026-07-04-wf-loader-unify.md  2026-07-05-wf-gate-dynamic-kind-mapping.md  2026-07-05-wf-gate-incumbent-regression.md  2026-07-14-wf-gate-v3-enforce.md  2026-07-18-sidecar-176-consumer-evidence.md  2026-07-21-modal-wf-patchtst-rescore.md  2026-07-21-wf-patchtst-invoke-model-module.md
docs/research/: 2026-06-25-vol-gate-opportunity-cost.md  2026-06-28-wf-gate-genuine-ic-calibration-plan.md  (+1 more)
research/: research_vol_gate_opportunity_cost.py
src/: wf_patchtst_modal_app.py
tests/: test_backtest_pipeline.py  test_build_dashboard.py  test_daily_ops_repo_root.py  test_forensics_import.py  test_forward_returns_backfill.py  test_import_boundaries.py  test_lift_lean_export.py  test_lift_metrics.py  test_market_calendar_repoint.py  test_modal_wf_patchtst.py  test_no_bare_lifted_imports.py  test_research_vol_gate.py  test_runtime_parity.py  test_session_resolution.py  test_track_b_verdict_assembler.py
(+136 files in other folders)
