[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renquant-backtesting"
version = "0.1.0"
description = "Backtesting and LEAN assembly workflows for RenQuant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "renquant-common>=0.2,<0.3",
  "renquant-pipeline>=0.2,<0.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src",
  "../renquant-common/src",
  "../renquant-base-data/src",
  "../renquant-artifacts/src",
  "../renquant-pipeline/src",
]
testpaths = ["tests"]
